# context_engineering_sdk

./: .gitignore  README.md  context_engineering_model.md  context_engineering_sdk_design.md  pyproject.toml
context_engineering_sdk/: __init__.py  config.py  engine.py
context_engineering_sdk/builder/: __init__.py  assembler.py  deriver.py  ingestor.py  pruner.py  renderer.py  summarizer.py
context_engineering_sdk/core/: __init__.py  clock.py  errors.py  hasher.py  id_generator.py  migrator.py  redactor.py  ref_selector.py  token_estimator.py  types.py
context_engineering_sdk/integrations/: __init__.py
context_engineering_sdk/memory/: __init__.py  manager.py  user_memory_store.py
context_engineering_sdk/observability/: __init__.py  event_bus.py
context_engineering_sdk/store/: __init__.py  base.py  file.py  memory.py
doc/: architecture.md
examples/: README.md  agentscope_integration.py  autogen_integration.py  basic_multi_turn.py  langchain_integration.py  langgraph_integration.py  llamaindex_integration.py  memory_storage.py  personalized_memory.py  streaming_conversation.py  tool_usage.py
tests/: conftest.py  test_builder.py  test_core.py  test_e2e.py  test_event_bus.py  test_file_store.py  test_pruner_contract.py  test_store_contract.py
